[package]
name = "mining_proxy_sv1"
version = "0.1.0"
edition = "2018"
description = "SV1 mining proxy role"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.5.1"
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
error_handling = { version = "1.0.0", path = "../../utils/error-handling" }
config = { version = "0.14.0", features = ["toml"] }
v1 = { version = "^1.0.0", path = "../../protocols/v1", package="sv1_api" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
clap = { version = "^4.5.4", features = ["derive"] }
futures = "0.3.25"
key-utils = { version = "^1.0.0", path = "../../utils/key-utils" }
stratum-common = { version = "1.0.0", path = "../../common", features = ["bitcoin"] }

