[package]
name = "mining_proxy_sv1"
version = "0.1.0"
edition = "2018"
description = "SV1 mining proxy role"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.5.1"
async-std = { version = "1.12.0", features = ["attributes"] }
binary_sv2 = { version = "^1.0.0", path = "../../protocols/v2/binary-sv2/binary-sv2" }
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
error_handling = { version = "1.0.0", path = "../../utils/error-handling" }
config = { version = "0.14.0", features = ["toml"] }
v1 = { version = "^1.0.0", path = "../../protocols/v1", package="sv1_api" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
clap = { version = "^4.5.4", features = ["derive"] }
futures = "0.3.25"
key-utils = { version = "^1.0.0", path = "../../utils/key-utils" }
roles_logic_sv2 = { version = "^1.0.0", path = "../../protocols/v2/roles-logic-sv2" }
stratum-common = { version = "1.0.0", path = "../../common", features = ["bitcoin"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
rand = "0.8.4"
sha2 = "0.10.6"
