[package]
name = "mining_proxy_sv2"
version = "0.1.3"
authors = ["The Stratum V2 Developers"]
edition = "2018"
description = "SV2 mining proxy role"
documentation = "https://docs.rs/mining_proxy_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]


[lib]
name = "mining_proxy_sv2"
path = "src/lib/mod.rs"

[dependencies]
stratum-common.workspace = true
async-channel.workspace = true
async-recursion.workspace = true
binary_sv2.workspace = true
buffer_sv2.workspace = true
codec_sv2.workspace = true
const_sv2.workspace = true
futures.workspace = true
network_helpers_sv2.workspace = true
once_cell.workspace = true
roles_logic_sv2.workspace = true
serde.workspace = true
tokio.workspace = true
ext-config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nohash-hasher.workspace = true
key-utils.workspace = true
