[package]
name = "mining_proxy_sv2"
version = "0.1.3"
authors = ["The Stratum V2 Developers"]
edition = "2018"
description = "SV2 mining proxy role"
documentation = "https://docs.rs/mining_proxy_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]


[lib]
name = "mining_proxy_sv2"
path = "src/lib/mod.rs"

[dependencies]
async-channel = "1.8.0"
async-recursion = "0.3.2"
buffer_sv2 = { path = "../../utils/buffer" }
futures = "0.3.19"
network_helpers_sv2 = { path = "../roles-utils/network-helpers", features = ["with_buffer_pool"] }
once_cell = "1.12.0"
roles_logic_sv2 = { path = "../../protocols/v2/roles-logic-sv2" }
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
stratum-common = { path = "../../common" }
tokio = { version = "1.44.1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3"}
nohash-hasher = "0.2.0"
key-utils = { path = "../../utils/key-utils" }
