[package]
name = "new-pool"
version = "0.1.0"
edition = "2024"

[lib]
name = "new_pool_sv2"
path = "src/lib/mod.rs"

[dependencies]
async-channel = "1.5.1"
stratum-common = { path = "../../common", features = ["with_network_helpers"] }
buffer_sv2 = { path = "../../utils/buffer" }
rand = "0.8.4"
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
secp256k1 = { version = "0.28.2", default-features = false, features = ["alloc", "rand", "rand-std"] }
tokio = { version = "1.44.1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
async-recursion = "1.0.0"
error_handling = { path = "../../utils/error-handling" }
nohash-hasher = "0.2.0"
key-utils = { path = "../../utils/key-utils" }
config_helpers_sv2 = { path = "../roles-utils/config-helpers" }
clap = { version = "4.5.39", features = ["derive"] }