[package]
name = "pool_sv2"
version = "0.1.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "SV2 pool role"
documentation = "https://docs.rs/pool_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]


[lib]
name = "pool_sv2"
path = "src/lib/mod.rs"

[dependencies]
async-channel = "1.5.1"
stratum-common = { path = "../../common", features = ["with_network_helpers"] }
buffer_sv2 = { path = "../../utils/buffer" }
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
secp256k1 = { version = "0.28.2", default-features = false, features = ["alloc", "rand", "rand-std"] }
tokio = { version = "1.44.1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
key-utils = { path = "../../utils/key-utils" }
config_helpers_sv2 = { path = "../roles-utils/config-helpers" }
clap = { version = "4.5.39", features = ["derive"] }