[package]
name = "pool_sv2"
version = "0.2.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "SV2 pool role"
documentation = "https://docs.rs/pool_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]


[lib]
name = "pool_sv2"
path = "src/lib/mod.rs"

[dependencies]
stratum-apps = { path = "../stratum-apps", features = ["pool"] }
async-channel = "1.5.1"
rand = "0.8.4"
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
secp256k1 = { version = "0.28.2", default-features = false, features = ["alloc", "rand", "rand-std"] }
tokio = { version = "1.44.1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
clap = { version = "4.5.39", features = ["derive"] }

