[package]
name = "stratum-apps"
version = "0.1.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
readme = "README.md"
description = "Complete Stratum V2 application development kit - all utilities in one crate"
documentation = "https://docs.rs/stratum-apps"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"
homepage = "https://stratumprotocol.org"
keywords = ["stratum", "mining", "bitcoin", "protocol", "sv2"]

[dependencies]
# Core protocol layer
stratum-core = { path = "../../stratum-core", version = "0.1.0" }

# External dependencies needed by the modules
# Network helpers dependencies
async-channel = { version = "1.8.0" }
tokio = { version = "1.44.1", features = ["full"] }
futures = { version = "0.3.28" }
tokio-util = { version = "0.7.10", default-features = false, features = ["codec"], optional = true }

# Config helpers dependencies  
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
miniscript = { version = "12.3.4", default-features = false, features = ["no-std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1" }

# Key utils dependencies
bs58 = { version = "0.4.0", default-features = false, features = ["check", "alloc"] }
secp256k1 = { version = "0.28.2", default-features = false, features = ["alloc", "rand"] }
rand = { version = "0.8.5", default-features = false }
rustversion = "1.0"
generic-array = "=0.14.7"

# RPC optional dependencies
serde_json = { version = "1.0", default-features = false, features = ["alloc", "raw_value"], optional = true }
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.21.5", optional = true }
hyper = { version = "1.1.0", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }

# Common external dependencies that roles always need
clap = { version = "4.5.39", features = ["derive"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }

[features]
default = ["network", "config", "std"]

# Core module features
network = ["tokio-util"]
config = []
rpc = ["serde_json", "hex", "base64", "hyper", "hyper-util", "http-body-util"]
std = ["bs58/std", "secp256k1/rand-std", "rand/std", "rand/std_rng"]

# Protocol features passed through to stratum-core
sv1 = ["stratum-core/sv1", "stratum-core/translation", "tokio-util", "serde_json"]
with_buffer_pool = ["stratum-core/with_buffer_pool"]

# Convenience feature bundles for different role types
pool = ["network", "config", "with_buffer_pool"]
jd_client = ["network", "config", "with_buffer_pool"] 
jd_server = ["network", "config", "rpc", "with_buffer_pool"]
translator = ["network", "config", "sv1", "with_buffer_pool"]
mining_device = ["network", "config", "with_buffer_pool"]

[package.metadata.docs.rs]
features = ["pool", "jd_client", "jd_server", "translator", "sv1", "rpc"]
