[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoind = "0.36.0"
flate2 = "1.0.32"
minreq = { version = "2.12.0", features = ["https"] }
once_cell = "1.20.0"
tar = "0.4.41"
pool_sv2 = { version = "0.1.0", path = "../pool" }
key-utils = { version = "1.0.0", path = "../../utils/key-utils" }
tokio = { version = "1.16.1", features = ["full"] }
mining_device = { version = "0.1.1", path = "../test-utils/mining-device" }

[lib]
path = "tests/common/mod.rs"

[features]
mining_device_reject_auth = ["pool_sv2/MG_reject_auth", "mining_device/abort_mining"]
