[package]
name = "integration_tests_sv2"
version = "0.1.0"
authors = ["The Stratum V2 Developers"]
edition = "2018"
documentation = "https://github.com/stratum-mining/stratum"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

[dependencies]
async-channel = "1.5.1"
binary_sv2 = { path = "../../protocols/v2/binary-sv2/binary-sv2" }
bitcoind = "0.36.0"
codec_sv2 = { path = "../../protocols/v2/codec-sv2", features = ["noise_sv2"] }
const_sv2 = { path = "../../protocols/v2/const-sv2" }
flate2 = "1.0.32"
jd_client = { path = "../jd-client" }
jd_server = { path = "../jd-server" }
key-utils = { path = "../../utils/key-utils" }
mining_proxy_sv2 = { path = "../mining-proxy" }
minreq = { version = "2.12.0", features = ["https"] }
once_cell = "1.19.0"
network_helpers_sv2 = { path = "../roles-utils/network-helpers", features =["with_tokio","with_buffer_pool"] }
pool_sv2 = { path = "../pool" }
roles_logic_sv2 = { path = "../../protocols/v2/roles-logic-sv2" }
mining_device_sv1 = { path = "../test-utils/mining-device-sv1" }
tar = "0.4.41"
tokio = { version="1.36.0",features = ["full","tracing"] }
tracing = "0.1.40"
translator_sv2 = { path = "../translator" }
rand = "0.8.4"
stratum-common = { path = "../../common" }

[lib]
path = "tests/common/mod.rs"
