[package]
name = "translator_sv2"
version = "2.0.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "SV1 to SV2 translation proxy"
documentation = "https://docs.rs/translator_sv2"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol", "translator", "proxy"]

[lib]
name = "translator_sv2"
path = "src/lib/mod.rs"

[[bin]]
name = "translator_sv2"
path = "src/main.rs"

[dependencies]
stratum-common = { path = "../../common" }
async-channel = "1.5.1"
async-recursion = "0.3.2"
binary_sv2 = { path = "../../protocols/v2/binary-sv2" }
buffer_sv2 = { path = "../../utils/buffer" }
codec_sv2 = { path = "../../protocols/v2/codec-sv2", features = ["noise_sv2", "with_buffer_pool"] }
framing_sv2 = { path = "../../protocols/v2/framing-sv2" }
network_helpers_sv2 = { path = "../roles-utils/network-helpers", features=["with_buffer_pool", "sv1"] }
once_cell = "1.12.0"
roles_logic_sv2 = { path = "../../protocols/v2/roles-logic-sv2" }
stratum_translation = { path = "../roles-utils/stratum-translation" }
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
futures = "0.3.25"
tokio = { version = "1.44.1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
v1 = { path = "../../protocols/v1", package="sv1_api" }
error_handling = { path = "../../utils/error-handling" }
key-utils = { path = "../../utils/key-utils" }
tokio-util = { version = "0.7.10", features = ["codec"] }
rand = "0.8.4"
primitive-types = "0.13.1"
clap = { version = "4.5.39", features = ["derive"] }
config_helpers_sv2 = { path = "../roles-utils/config-helpers" }


[dev-dependencies]
sha2 = "0.10.6"

